# agent1

./: Cargo.toml  README.md  deny.toml  docker-compose.yml  justfile
.github/workflows/: main.yml  pr.yml
src/: log.rs  main.rs
src/agent/: domain.rs  mod.rs  run.rs  tools.rs
src/agent/assets/: system-prompt.txt
src/tools/: edit_file.rs  list_files.rs  mod.rs  read_file.rs  run_cmd.rs
