[package]
name = "agent1"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/dhth/agent1"
description = "An AI agent as learning exercise"
homepage = "https://github.com/dhth/agent1"
license = "MIT"
keywords = [
    "cli",
    "ai-agent",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "docker-compose.yml",
    "justfile",
]

[dependencies]
anyhow = "1.0.98"
colored = "3.0.0"
ignore = "0.4.23"
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "json", "rustls-tls"] }
schemars = "1.0.4"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.141"

[dev-dependencies]
insta = "1.43.1"
