[package]
name = "agent1"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/dhth/agent1"
description = "An AI agent as learning exercise"
homepage = "https://github.com/dhth/agent1"
license = "MIT"
keywords = [
    "cli",
    "ai-agent",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "docker-compose.yml",
    "justfile",
]

[dependencies]
anyhow = "1.0.102"
colored = "3.1.1"
etcetera = "0.11.0"
ignore = "0.4.25"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
schemars = "1.2.1"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
insta = "1.47.2"
